[pluto] - fixed dialog z-indexing

--- a/pluto/src/dialog/Dialog.css
+++ b/pluto/src/dialog/Dialog.css
@@ -38,8 +38,8 @@
         animation: var(--pluto-modal-animation);
         position: relative;
         border-color: var(--pluto-gray-l6);
-        z-index: 11;
         min-width: 400px;
+        z-index: 5;
         overflow: hidden;
         box-shadow: var(--pluto-shadow-v1);
         border-radius: 1rem;
@@ -50,6 +50,7 @@
         animation: var(--pluto-dialog-animation);
         box-shadow: var(--pluto-shadow-v1);
         max-height: 360px;
+        z-index: 6;
         &.pluto-height-small {
             max-height: 200px;
         }
@@ -91,7 +92,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        z-index: 10;
+        z-index: 4;
         padding: 5rem;
         transition: background 0.15s ease-in-out;
         background: var(--pluto-gray-l8-40);
